adaugat ultimele note html

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 <ul>
     <li><a href="./works.html">Works</a></li>
     <li><a href="./blog.html">Blog</a></li>
-    <li><a href="">Contacts</a></li>
+    <li><a href="./index.html">Contacts</a></li>
 </ul>
   </header>
   <h1>
@@ -83,37 +83,37 @@
     </ul>
   </section>
   <footer>
-        <ul>
-            <li>
-    <a>
-        <svg>
-            <use></use>
-        </svg>
-    </a>
-            </li>
-            <li>
-                <a>
-                    <svg>
-                        <use></use>
-                    </svg>
-                </a>
-                
-            </li>
-            <li>
-                <a>
-                    <svg>
-                        <use></use>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a>
-                    <svg>
-                        <use></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
+    <ul>
+        <li>
+<a href="#">
+    <svg>
+        <use href="/images/icons.svg#icon-facebook"></use>
+    </svg>
+</a>
+        </li>
+        <li>
+            <a href="#">
+                <svg>
+                    <use href="/images/icons.svg#icon-instagram"></use>
+                </svg>
+            </a>
+            
+        </li>
+        <li>
+            <a href="#">
+                <svg>
+                    <use href="/images/icons.svg#icon-twitter"></use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <svg>
+                    <use href="/images/icons.svg#icon-linkedin"></use>
+                </svg>
+            </a>
+        </li>
+    </ul>
   </footer>
   </main>
 </html>
