--- a/index.html
+++ b/index.html
@@ -13,43 +13,48 @@
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
   <main>
-  <header>
+  <header class="page-header">
+    <div class="container">
+        <svg>
+            <use href="./images/icons.svg#icon-Burger"></use>
+        </svg>
 <ul>
     <li><a href="./works.html">Works</a></li>
     <li><a href="./blog.html">Blog</a></li>
-    <li><a href="">Contacts</a></li>
+    <li><a href="index.html">Contacts</a></li>
 </ul>
+</div>
   </header>
   <heading-section>
     <div>
-<h1>
+<h1 class="section-title" >
     Hi, I am John,
 Creative Technologist
 </h1>
 <p>
     Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
 </p>
-<button type="button">
+<button class="section-button" type="button">
     Download Resume
 </button></div>
 <div>
-    <img href="" rel="">
+    <img src="/images/Ellipse.png" rel="personal picture">
 </div>
   </section>
   <section>
 <h3>Recent posts</h3>
 <div>
-    <h1>
+    <h3>
         Making a design system from scratch
-    </h1>
-    <p>12 Feb 2020</p>
+    </h3>
+    <p class="date-paragraph">12 Feb 2020</p>
     <p>Design, Pattern</p>
     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
 </div>
 <div>
-    <h1>
+    <h3>
         Creating pixel perfect icons in Figma
-    </h1>
+    </h3>
     <p>12 Feb 2020</p>
     <p>Figma, Icon Design</p>
     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
@@ -58,7 +63,8 @@ Creative Technologist
   <featured-works-section>
     <ul>
         <li>
-<img>
+<img src="./images/Rectangle30.png"
+srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard design">>
 <h2>
     Designing Dashboards
 </h2>
@@ -69,7 +75,8 @@ Creative Technologist
 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
         </li>
         <li>
-            <img>
+            <img src="./images/Rectangle32.png"
+            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="dashboard design">
             <h2>Vibrant Portraits of 2020</h2>
             <p>
                 2018
@@ -82,7 +89,8 @@ Creative Technologist
             </p>
         </li>
         <li>
-            <img>
+            <img src="./images/Rectangle34.png"
+            srcset="./images/Rectangle34.png, ./images/Rectangle34x2.png" alt="days of malayalam">>
             <h2>36 Days of Malayalam type</h2>
             <p>2018
 
@@ -99,31 +107,31 @@ Creative Technologist
   <footer>
     <ul>
         <li>
-<a>
+<a href="#">
     <svg>
-        <use></use>
+        <use href="/images/icons.svg#icon-facebook"></use>
     </svg>
 </a>
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
             
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
         </li>
