--- a/works.html
+++ b/works.html
@@ -17,37 +17,82 @@
 <ul>
     <li><a href="./works.html">Works</a></li>
     <li><a href="./blog.html">Blog</a></li>
-    <li><a href="">Contacts</a></li>
+    <li><a href="./index.html">Contacts</a></li>
 </ul>
   </header>
+<section>
+    <h1>Work</h1>
+    <ul>
+        <li>
+<img src="./images/Rectangle30.png"
+srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard design">>
+<h2>
+    Designing Dashboards
+</h2>
+<p>2020</p>
+<p>
+    Dashboard
+</p>
+<p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </li>
+        <li>
+            <img src="./images/Rectangle32.png"
+            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="dashboard design">
+            <h2>Vibrant Portraits of 2020</h2>
+            <p>
+                2018
+            </p>
+            <p>
+                Illustration
+            </p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </li>
+        <li>
+            <img src="./images/Rectangle34.png"
+            srcset="./images/Rectangle34.png, ./images/Rectangle34x2.png" alt="days of malayalam">>
+            <h2>36 Days of Malayalam type</h2>
+            <p>2018
+
+            </p>
+            <p>
+                Typography
+            </p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+        </li>
+    </ul>
+</section>
   <footer>
     <ul>
         <li>
-<a>
+<a href="#">
     <svg>
-        <use></use>
+        <use href="/images/icons.svg#icon-facebook"></use>
     </svg>
 </a>
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
             
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
         <li>
-            <a>
+            <a href="#">
                 <svg>
-                    <use></use>
+                    <use href="/images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
         </li>
