--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
         <li>
             <img src="./images/Rectangle32.png"
-            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="dashboard design">
+            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="portraits">
             <h2>Vibrant Portraits of 2020</h2>
             <p>
                 2018
