--- a/works.html
+++ b/works.html
@@ -37,7 +37,7 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
         <li>
             <img src="./images/Rectangle32.png"
-            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="dashboard design">
+            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="portraits">
             <h2>Vibrant Portraits of 2020</h2>
             <p>
                 2018
@@ -62,6 +62,21 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
             <p>
                 Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
             </p>
+        </li>
+        <li>
+            <img src="./images/Rectangle40.png"
+            srcset="./images/Rectangle40.png, ./images/Rectangle40x2.png" alt="components">
+            <h2>Components</h2>
+            <p>2018
+
+            </p>
+            <p>
+                Components, Design
+            </p>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+            </p>
+
         </li>
     </ul>
 </section>
