--- a/works.html
+++ b/works.html
@@ -11,22 +11,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="./css/main.min.css" rel="stylesheet">
+<title>Works</title>
   </head>
-  <main>
-  <header>
-<ul>
-    <li><a href="./works.html">Works</a></li>
-    <li><a href="./blog.html">Blog</a></li>
-    <li><a href="./index.html">Contacts</a></li>
+  <body>
+  <header class="page-header">
+    <div class="container">
+    <button class= "menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu" type="button"><svg>
+            <use href="./images/icons.svg#icon-Burger"></use>
+        </svg>
+    </button>
+<ul class="page-header-grid">
+    <li class="page-header-item"><a class="page-header-link"href="./works.html">Works</a></li>
+    <li class="page-header-item"><a class="page-header-link"href="./blog.html">Blog</a></li>
+    <li class="page-header-item"><a class="page-header-link" href="./index.html">Contacts</a></li>
 </ul>
+</div>
   </header>
+  <main>
 <section>
     <h1>Work</h1>
     <ul>
         <li>
 <img src="./images/Rectangle30.png"
-srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard design">>
-<h2>
+srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png 2x" alt="dashboard design">>
+<h2 class="section-title">
     Designing Dashboards
 </h2>
 <p>2020</p>
@@ -37,8 +48,8 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
         <li>
             <img src="./images/Rectangle32.png"
-            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png" alt="portraits">
-            <h2>Vibrant Portraits of 2020</h2>
+            srcset="./images/Rectangle32.png, ./images/Rectangle32x2.png 2x" alt="portraits">
+            <h2 class="section-title">Vibrant Portraits of 2020</h2>
             <p>
                 2018
             </p>
@@ -51,8 +62,8 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
         <li>
             <img src="./images/Rectangle34.png"
-            srcset="./images/Rectangle34.png, ./images/Rectangle34x2.png" alt="days of malayalam">>
-            <h2>36 Days of Malayalam type</h2>
+            srcset="./images/Rectangle34.png, ./images/Rectangle34x2.png 2x" alt="days of malayalam">>
+            <h2 class="section-title">36 Days of Malayalam type</h2>
             <p>2018
 
             </p>
@@ -65,8 +76,8 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
         <li>
             <img src="./images/Rectangle40.png"
-            srcset="./images/Rectangle40.png, ./images/Rectangle40x2.png" alt="components">
-            <h2>Components</h2>
+            srcset="./images/Rectangle40.png, ./images/Rectangle40x2.png 2x" alt="components">
+            <h2 class="section-title">Components</h2>
             <p>2018
 
             </p>
@@ -80,38 +91,64 @@ srcset="./images/Rectangle30.png, ./images/Rectangle30x2.png" alt="dashboard des
         </li>
     </ul>
 </section>
-  <footer>
-    <ul>
-        <li>
-<a href="#">
-    <svg>
+  </main>
+  <footer class="footer-section">
+    <div class="container-footer">
+    <ul class="footer-grid">
+        <li class="footer-grid-item">
+<a  class="link" href="#">
+    <svg class="link-icon">
         <use href="/images/icons.svg#icon-facebook"></use>
     </svg>
 </a>
         </li>
-        <li>
-            <a href="#">
-                <svg>
+        <li class="footer-grid-item">
+            <a  class="link" href="#">
+                <svg class="link-icon">
                     <use href="/images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
             
         </li>
-        <li>
-            <a href="#">
-                <svg>
+        <li class="footer-grid-item">
+            <a  class="link"href="#">
+                <svg class="link-icon">
                     <use href="/images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
         </li>
-        <li>
-            <a href="#">
-                <svg>
+        <li class="footer-grid-item">
+            <a class="link" href="#">
+                <svg class="link-icon">
                     <use href="/images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
         </li>
     </ul>
+</div>
   </footer>
-  </main>
+  <div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+      <svg
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+          clip-rule="evenodd"
+        ></path>
+      </svg>
+    </button>
+    <ul class="mobile-menu">
+      <li><a class= "mobile-menu-link" href="blog.html" class="link"> Blog</a></li>
+      <li><a class= "mobile-menu-link" href="works.html" class="link">Works</a></li>
+      <li><a class= "mobile-menu-link" href="index.html" class="link">Contacts</a></li>
+    </ul>
+  </div>
+    <script defer src="js/mobile-menu.js"></script>
+</body>
 </html>
